styling the result

--- a/src/app.sass
+++ b/src/app.sass
@@ -20,7 +20,7 @@ $widescreen-enabled: false
 $fullhd-enabled: false
 
 // Update some of Bulma's component variables
-$body-background-color: #ffffff
+$body-background-color: #f5f5f5
 $control-border-width: 2px
 $input-border-color: transparent
 $input-shadow: none
@@ -28,10 +28,10 @@ $input-shadow: none
 // Import only what you need from Bulma but I have imported all for now
 @import '../node_modules/bulma/sass/utilities/_all.sass'
 @import '../node_modules/bulma/sass/base/_all.sass'
-@import '../node_modules/bulma/sass/elements/button.sass'
+// @import '../node_modules/bulma/sass/elements/button.sass'
 @import '../node_modules/bulma/sass/elements/container.sass'
-@import '../node_modules/bulma/sass/elements/form.sass'
+// @import '../node_modules/bulma/sass/elements/form.sass'
 @import '../node_modules/bulma/sass/elements/title.sass'
-@import '../node_modules/bulma/sass/components/navbar.sass'
-@import '../node_modules/bulma/sass/layout/hero.sass'
-@import '../node_modules/bulma/sass/layout/section.sass'
+// @import '../node_modules/bulma/sass/components/navbar.sass'
+// @import '../node_modules/bulma/sass/layout/hero.sass'
+// @import '../node_modules/bulma/sass/layout/section.sass'
