--- a/src/stylesheet/main.sass
+++ b/src/stylesheet/main.sass
@@ -1,3 +1,6 @@
+body
+    color: #000
+
 .searchApp
     h2
         text-align: center
@@ -16,3 +19,20 @@
             margin: 10px 0px
         img
             width: 400px
+    .resultCard
+        margin: 15px
+        text-align: center
+        padding: 20px
+        box-shadow: 8px 7px 13px 0px #dadada
+        border: 1px solid #e6e6e6
+        background-color: #ffffff
+    .result
+        display: flex
+        flex-wrap: wrap
+        align-items: center
+        justify-content: space-around
+    figure.image 
+        padding-bottom: 15px
+
+.bolder
+    font-weight: 600
